working on canvas...

--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,11 @@
 
     <div class="jumbotron">
         <input type="text" class="form-control ta" id="topinput">
-        <div class="container" id="meme">
-            <img src="assets/memes/Baby-Sammy.png"/>
+
+
+        <div class="container">
+            <canvas id="meme" width="512" height="384"></canvas>
+
             <div class="memefont topfont" id="topfont">
                 <span></span>
             </div>
@@ -37,6 +40,7 @@
                 <span></span>
             </div>
         </div>
+
 
         <input type="text" class="form-control ta" id="bottominput">
 
