trying different things for text outline

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
         <div class="container" id="meme">
             <img src="assets/memes/Baby-Sammy.png"/>
             <div class="memefont topfont" id="topfont">
+                <span class="memefont backing"></span>
                 <span></span>
             </div>
             <div class="memefont bottomfont" id="bottomfont">
@@ -43,5 +44,12 @@
         <button type="button" class="btn btn-success" id="generate">Generate</button>
     </div>
 </div>
+
+<div class="modal fade mlg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content" id="render">
+        </div>
+    </div>
+</div>
 </body>
-</html>
+</html>3
