--- a/app/index.html
+++ b/app/index.html
@@ -31,11 +31,12 @@
         <div class="container" id="meme">
             <img src="assets/memes/Baby-Sammy.png"/>
             <div class="memefont topfont" id="topfont">
-                <span class="memefont backing"></span>
-                <span></span>
+                <span class="memefont backfont"></span>
+                <span class="memefont frontfont"></span>
             </div>
             <div class="memefont bottomfont" id="bottomfont">
-                <span></span>
+                <span class="memefont backfont low"></span>
+                <span class="memefont frontfont low"></span>
             </div>
         </div>
 
