Made bottom work

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
         <input type="text" class="form-control ta" id="topinput">
 
         <div class="container" id="meme">
-            <img src="assets/memes/Baby-Sammy.png"/>
+            <img src="assets/memes/stackoverflow.png"/>
             <div class="memefont-container" id="topfont-container">
                 <div class="font-wrapper">
                     <span class="memefont backfont"></span>
