Conversion to canvas image and fixed text

--- a/app/index.html
+++ b/app/index.html
@@ -10,54 +10,56 @@
 
 <body>
 
-<nav class="maker-nav navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-white" href="#">Meme Maker</a>
-    <ul class="nav nav-pills float-right">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-        </li>
-    </ul>
-</nav>
+    <nav class="maker-nav navbar navbar-dark bg-dark">
+        <a class="navbar-brand text-white" href="#">Meme Maker</a>
+        <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
+    </nav>
 
-<div class="container">
-    <div id="meme-container" class="jumbotron">
-        <div class="col-sm-12">
-        <input type="text" class="form-control ta" id="topinput">
+    <div class="container">
+        <div id="meme-container" class="jumbotron">
+            <div class="col-sm-12">
+            <input type="text" class="form-control ta" id="topinput">
 
-        <div class="container" id="meme">
-            <img src="assets/memes/Baby-Sammy.png"/>
-            <div class="memefont-container" id="topfont-container">
-                <div class="font-wrapper">
-                    <span class="memefont backfont"></span>
-                    <span class="memefont frontfont"></span>
+            <div class="container" id="meme">
+                <!--<img src="assets/memes/Baby-Sammy.png"/>-->
+                <canvas id="meme-canvas" width='500' height='300'></canvas>
+                <div class="memefont-container" id="topfont-container">
+                    <div class="font-wrapper">
+                        <span class="memefont backfont"></span>
+                        <span class="memefont frontfont"></span>
+                    </div>
+                </div>
+                <div class="memefont-container" id="bottomfont-container">
+                    <div class="font-wrapper">
+                        <span class="memefont backfont low"></span>
+                        <span class="memefont frontfont low"></span>
+                    </div>
                 </div>
             </div>
-            <div class="memefont-container" id="bottomfont-container">
-                <div class="font-wrapper">
-                    <span class="memefont backfont low"></span>
-                    <span class="memefont frontfont low"></span>
-                </div>
+
+            <input type="text" class="form-control ta" id="bottominput">
+
+            <button type="button" class="btn btn-success" id="generate">Generate</button>
             </div>
         </div>
+    </div>
 
-        <input type="text" class="form-control ta" id="bottominput">
-
-        <button type="button" class="btn btn-success" id="generate">Generate</button>
+    <div class="modal fade mlg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content" id="render">
+            </div>
         </div>
     </div>
-</div>
-
-<div class="modal fade mlg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content" id="render">
-        </div>
-    </div>
-</div>
 </body>
+
 </html>
