- fixed spacing on top and bottom text inputs - added field identifier above each text input

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,10 @@
     <div class="container">
         <div id="meme-container" class="jumbotron">
             <div class="col-sm-12">
-                <input type="text" class="form-control ta" id="topinput" />
+                <div class="text-input">
+                    <p>Top Text:</p>
+                    <input type="text" class="form-control ta" id="topinput" />
+                </div>
 
                 <div class="container">
                     <div id="meme" class="container">
@@ -61,7 +64,10 @@
                     </div>
                 </div>
 
-                <input type="text" class="form-control ta" id="bottominput" />
+                <div class="text-input">
+                    <p>Bottom Text:</p>
+                    <input type="text" class="form-control ta" id="bottominput" />
+                </div>
 
                 <button type="button" class="btn btn-success" id="generate">Generate</button>
             </div>
