--- a/app/index.html
+++ b/app/index.html
@@ -46,8 +46,8 @@
                     <input type="text" class="form-control ta" id="topinput" />
                 </div>
 
-                <div class="container">
-                    <div id="meme" class="container">
+                <div id="canvas-container" class="container">
+                    <div id="meme">
                         <canvas id="meme-canvas" width="400" height="400"></canvas>
                     </div>
                     <div class="memefont-container" id="topfont-container">
